// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BTP FN Components/Table Standard Table 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          <a
            class="fn-link"
          >
            user.name@email.com
          </a>
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          <a
            class="fn-link"
          >
            user.name@email.com
          </a>
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          <a
            class="fn-link"
          >
            user.name@email.com
          </a>
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          <a
            class="fn-link"
          >
            user.name@email.com
          </a>
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;

exports[`Storyshots BTP FN Components/Table Table with Buttons 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-table__end-container"
          >
            
                    Table cell with end buttons
                    
            <button
              class="fn-button fn-button--icon-only fn-button--secondary"
            >
              
                        
              <span
                class="sap-icon sap-icon--edit"
              />
              
                    
            </button>
            
                    
            <button
              class="fn-button fn-button--icon-only fn-button--secondary"
            >
              
                        
              <span
                class="sap-icon sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-table__end-container"
          >
            
                    Table cell with text and navigation button
                    
            <button
              class="fn-button fn-button--icon-only fn-button--layout"
            >
              
                        
              <span
                class="sap-icon sap-icon--navigation-right-arrow"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell fn-table__cell--no-hover"
        >
          
                
          <div
            class="fn-table__end-container"
          >
            
                    
            <button
              class="fn-button fn-button--icon-only fn-button--layout"
            >
              
                        
              <span
                class="sap-icon sap-icon--navigation-right-arrow"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;

exports[`Storyshots BTP FN Components/Table Table with Byline 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell fn-table__cell--byline"
        >
          
                
          <div
            class="fn-avatar fn-table__avatar fn-avatar--circle fn-avatar--m fn-avatar--indigo"
          >
            
                    
            <div
              class="fn-avatar__initials"
            >
              M
            </div>
            
                
          </div>
          
                
          <div
            class="fn-table__start-container"
          >
            
                    
            <span
              class="fn-table__byline-title"
            >
              Byline Table Cell with Avatar Title
            </span>
            
                    
            <span
              class="fn-lable__byline-text"
            >
              Table Cell Byline Text
            </span>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell fn-table__cell--byline"
        >
          
                
          <div
            class="fn-table__start-container"
          >
            
                    
            <span
              class="fn-table__byline-title"
            >
              Byline Table Cell Title
            </span>
            
                    
            <span
              class="fn-lable__byline-text"
            >
              Table Cell Byline Text
            </span>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell fn-table__cell--byline"
        >
          
                
          <div
            class="fn-table__start-container"
          >
            
                    
            <span
              class="fn-table__byline-title"
            >
              Byline Table Cell
            </span>
            
                    
            <div
              class="fn-object-status fn-object-status--byline fn-object-status--critical"
            >
              
                        
              <span
                class="sap-icon sap-icon--status-critical"
              />
              
                        
              <div
                class="fn-object-status__text"
              >
                Critical
              </div>
              
                    
            </div>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;

exports[`Storyshots BTP FN Components/Table Table with Checkboxes 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          
                
          <div
            class="fn-checkbox fn-table__header-checkbox"
            tabindex="0"
          >
            
                    
            <input
              aria-label="checkbox"
              class="fn-checkbox__input"
              id="checkbox-1"
              name="checkbox-1"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <span
              class="fn-checkbox__checkmark"
            />
            
                
          </div>
          
                Column Header
            
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-checkbox"
            tabindex="0"
          >
            
                    
            <input
              aria-label="checkbox"
              class="fn-checkbox__input"
              id="checkbox-1"
              name="checkbox-1"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <span
              class="fn-checkbox__checkmark"
            />
            
                
          </div>
          
                Table cell with checkbox
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-checkbox"
            tabindex="0"
          >
            
                    
            <input
              aria-label="checkbox"
              class="fn-checkbox__input"
              id="checkbox-1"
              name="checkbox-1"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <span
              class="fn-checkbox__checkmark"
            />
            
                
          </div>
          
                Table cell with checkbox
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-checkbox"
            tabindex="0"
          >
            
                    
            <input
              aria-label="checkbox"
              class="fn-checkbox__input"
              id="checkbox-1"
              name="checkbox-1"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <span
              class="fn-checkbox__checkmark"
            />
            
                
          </div>
          
                Table cell with checkbox
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-checkbox"
            tabindex="0"
          >
            
                    
            <input
              aria-label="checkbox"
              class="fn-checkbox__input"
              id="checkbox-1"
              name="checkbox-1"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <span
              class="fn-checkbox__checkmark"
            />
            
                
          </div>
          
                Table cell with checkbox
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          01/26/17
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;

exports[`Storyshots BTP FN Components/Table Table with Group Headers 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__group-header"
        >
          Group Header
        </td>
        
            
        <td
          class="fn-table__cell"
        />
        
            
        <td
          class="fn-table__cell"
        />
        
            
        <td
          class="fn-table__cell"
        />
        
            
        <td
          class="fn-table__cell"
        />
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;

exports[`Storyshots BTP FN Components/Table Table with Selected Rows / Cells 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row is-selected"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Selected Table Row
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Selected Table Row
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Selected Table Row
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Selected Table Row
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Selected Table Row
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell is-selected"
        >
          Selected Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;

exports[`Storyshots BTP FN Components/Table Table with Statuses and Info Labels 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    .docs-story {
        background: white;
    }

  </style>
  


  <table
    class="fn-table"
  >
    
    
    <thead>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
            
        <th
          class="fn-table__header"
          scope="col"
        >
          Column Header
        </th>
        
        
      </tr>
      
    
    </thead>
    
    
    <tbody>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-object-status fn-object-status--byline fn-object-status--positive"
          >
            
                    
            <span
              class="sap-icon sap-icon--status-positive"
            />
            
                    
            <div
              class="fn-object-status__text"
            >
              Positive
            </div>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <span
            class="fn-info-label fn-info-label--yellow"
          >
            
                    
            <span
              class="fn-info-label__circle"
            />
            
                
            <span
              class="fn-info-label__text"
            >
              State
            </span>
            
            
          </span>
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-object-status fn-object-status--byline fn-object-status--negative"
          >
            
                    
            <span
              class="sap-icon sap-icon--status-negative"
            />
            
                    
            <div
              class="fn-object-status__text"
            >
              Negative
            </div>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <span
            class="fn-info-label fn-info-label--crimson"
          >
            
                    
            <span
              class="fn-info-label__circle"
            />
            
                
            <span
              class="fn-info-label__text"
            >
              State
            </span>
            
            
          </span>
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-object-status fn-object-status--byline fn-object-status--info"
          >
            
                    
            <span
              class="sap-icon sap-icon--information"
            />
            
                    
            <div
              class="fn-object-status__text"
            >
              Information
            </div>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <span
            class="fn-info-label fn-info-label--indigo"
          >
            
                    
            <span
              class="fn-info-label__circle"
            />
            
                
            <span
              class="fn-info-label__text"
            >
              State
            </span>
            
            
          </span>
        </td>
        
        
      </tr>
      
        
      <tr
        class="fn-table__row"
      >
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <div
            class="fn-object-status fn-object-status--byline fn-object-status--critical"
          >
            
                    
            <span
              class="sap-icon sap-icon--status-critical"
            />
            
                    
            <div
              class="fn-object-status__text"
            >
              Critical
            </div>
            
                
          </div>
          
            
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          Table cell
        </td>
        
            
        <td
          class="fn-table__cell"
        >
          
                
          <span
            class="fn-info-label fn-info-label--cyan"
          >
            
                    
            <span
              class="fn-info-label__circle"
            />
            
                
            <span
              class="fn-info-label__text"
            >
              State
            </span>
            
            
          </span>
        </td>
        
        
      </tr>
      
    
    </tbody>
    

  </table>
  

</div>
`;
